fun-chat/src/app/pages/chat/chat.css
.chat {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  height: 100vh;
  width: 90vw;
  max-width: 1024px;
  margin: 0 auto;
  gap: 4px;
}

.chat-header {
  min-height: 40px;
  width: 100%;
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: space-between;
  border: 1px solid;
  border-radius: 5px;
  padding: 0 10px;
}

.chat-header-user-name {
  display: flex;
  max-width: 50%;
  overflow: hidden;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: flex-start;
}

.chat-header-user-name-name {
  font-weight: 600;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.chat-header-app-name {
  text-align: center;
  font-weight: 800;
  color: #ff8616;
  width: 70px;
}

.chat-header-buttons {
  display: flex;
  flex-direction: row;
  align-items: center;
}

.chat-header-buttons-logout {
  min-width: 140px;
  height: 32px;
  margin: 1%;
  max-width: 200px;
  width: 50%;
  border: 1px solid;
  border-radius: 5px;
  font-size: 18px;
}

.chat-header-buttons-info {
  margin-left: 2px;
  margin-right: -4px;
  height: 32px;
  min-width: 32px;
  border: 1px solid;
  border-radius: 35%;
  font-size: 22px;
  font-style: italic;
  font-weight: 800;
}

.chat-main {
  display: flex;
  flex-direction: row;
  height: 70vh;
  width: 100%;
  align-items: center;
  justify-content: space-between;
}

.chat-main-left {
  padding: 4px;
  height: 100%;
  width: 35%;
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  align-items: center;
  border: 1px solid;
  border-radius: 5px;
}

.chat-main-left-search {
  height: 24px;
  padding: 0 4px;
  width: 100%;
}

.chat-main-left-users-list {
  padding: 1%;
  margin: 1%;
  width: 100%;
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  align-items: flex-start;
  overflow-y: scroll;
}

.chat-main-left-users-list-user {
  width: 100%;
  padding: 2px 4px;
  display: flex;
  align-items: center;
  flex-direction: row;
  justify-content: flex-start;
  border-radius: 2px;
  cursor: pointer;
}

.chat-main-left-users-list-user:hover {
  background-color: #eeeeee;
}

.chat-main-left-users-list-user-status {
  width: 8px;
  height: 8px;
  margin-right: 8px;
  border: 1px solid;
  border-radius: 50%;
  background: #7a3100;
  cursor: pointer;
}

.user-status-active {
  background: #41e441;
}

.chat-main-left-users-list-user-login {
  font-weight: 600;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  width: 88%;
  cursor: pointer;
}

.chat-main-left-users-list-user-messages {
  min-width: 15px;
  border: 1px solid #41e441;
  border-radius: 50%;
  font-size: 10px;
  text-align: center;
  cursor: pointer;
}

.chat-main-right {
  height: 100%;
  width: 64.5%;
  padding: 4px;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: space-between;
  border: 1px solid;
  border-radius: 5px;
}

.chat-main-right-companion {
  width: 100%;
  max-height: 35px;
  height: 10%;
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: space-around;
  border-bottom: 1px solid;
}

.chat-main-right-companion-login {
  font-weight: 600;
}

.chat-main-right-companion-status {
  font-weight: 600;
  color: #41e441;
}

.status-offline {
  color: #6d3100;
}

.chat-main-right-dialog {
  padding: 4px;
  width: 100%;
  height: 80%;
  position: relative;
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  align-items: center;
  overflow-y: scroll;
}

.chat-main-right-dialog-message {
  display: flex;
  flex-direction: column;
  margin: 1% 0;
  width: 100%;
  align-items: flex-end;
}

.message-from-companion {
  align-items: flex-start;
}

.chat-main-right-dialog-message-box {
  padding: 1%;
  width: 60%;
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  align-items: center;
  background: #f5f5f5;
  border-radius: 5px;
}

.chat-main-right-dialog-message-box-header {
  align-items: center;
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  font-size: 0.7rem;
  justify-content: space-between;
  width: 80%;
}

.chat-main-right-dialog-message-box-header-label-left {
  align-items: center;
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  font-size: 0.7rem;
  justify-content: space-between;
}

.chat-main-right-dialog-message-box-header-label-right {
  align-items: center;
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  font-size: 0.7rem;
  justify-content: space-between;
}

.chat-main-right-dialog-message-box-text {
  background: #fdfdfd;
  border-radius: 5px;
  box-sizing: border-box;
  margin: 2% 0 0;
  padding: 3%;
  text-align: justify;
  width: 100%;
}

.chat-main-right-dialog-message-box-footer {
  align-items: center;
  display: flex;
  flex-direction: row;
  font-size: 0.7rem;
  justify-content: space-between;
  width: 80%;
}

.chat-main-right-dialog-message-box-footer-label-left {
  align-items: center;
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  font-size: 0.7rem;
  justify-content: space-between;
}

.chat-main-right-dialog-message-box-footer-label-right {
  align-items: center;
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  font-size: 0.7rem;
  justify-content: space-between;
}

.chat-main-right-dialog-placeholder {
  height: 100%;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  text-align: center;
}

.chat-main-right-send {
  margin-top: 4px;
  padding-top: 4px;
  height: 15%;
  max-height: 35px;
  width: 100%;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  border-top: 1px solid;
  align-items: center;
}

.chat-main-right-send-input {
  height: 28px;
  padding: 0 4px;
  width: 90%;
}

.chat-main-right-send-button {
  min-width: 100px;
  max-width: 100px;
  height: 32px;
  margin: 0;
  margin-left: 2px;
  width: 50%;
  border: 1px solid;
  border-radius: 5px;
  font-size: 18px;
}

.chat-footer {
  min-height: 40px;
  width: 100%;
  display: flex;
  align-items: center;
  flex-direction: row;
  justify-content: space-around;
  border: 1px solid;
  border-radius: 5px;
}

.chat-footer-about {
  display: flex;
  flex-direction: row;
  align-items: center;
  gap: 4px;
}

.chat-footer-about-link {
  height: 32px;
  width: 32px;
}

.chat-footer-about-link-img {
  height: 32px;
  width: 32px;
  margin: 0;
  padding: 0;
}

.disabled {
  cursor: default;
}

.hide-element {
  opacity: 0;
}

@media (max-width: 768px) {
  .chat-header-buttons-logout {
    min-width: 70px;
  }

  .chat-main-right-send {
    max-height: 60px;
    flex-direction: column;
  }

  .chat-main-right-send-input {
    width: 100%;
  }

  .chat-main-right-send-button {
    margin-top: 4px;
    max-width: 140px;
  }
}

